--- a/sandboxed/package.json
+++ b/sandboxed/package.json
@@ -43,5 +43,8 @@
         "@tableau/tabextsandbox": "^1.0.1",
         "react-app-rewire-multiple-entry": "^1.0.1",
         "react-app-rewired": "^2.1.3"
+    },
+    "resolutions": {
+        "**/**/minimist": "^1.2.2"
     }
 }
